--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGODB_URI="mongodb+srv://rohitpaulhhs04:SKqBfmiaVEqX3EmW@cluster0.moeeu2y.mong
 MONGODB_USER_PASS="SKqBfmiaVEqX3EmW"
 
 RESEND_API_KEY="re_VqJuxyDc_D6aiuSB9mP6WB3ZadB5TJSb1"
+
+NEXT_AUTH_SECRET= "CGISoSbMZ3C7A1OlSifeL7IxwoORppG7NyXUgX4U2a4="
